--- a/src/app/app.css
+++ b/src/app/app.css
@@ -14,7 +14,6 @@ h3 {
 
 .form {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
@@ -55,4 +54,8 @@ h3 {
   &:hover {
     background: #0069d2;
   }
+}
+
+.error {
+  color: red;
 }
