--- a/src/app/app.css
+++ b/src/app/app.css
@@ -51,8 +51,12 @@ h3 {
   width: 100%;
   margin-top: 20px;
 
-  &:hover {
+  &:hover&:not([disabled]) {
     background: #0069d2;
+  }
+
+  &[disabled] {
+    opacity: 0.7;
   }
 }
 
