--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,6 +29,8 @@
     }
   }
 
+  <gender-control [formField]="signupForm.gender" />
+
   <label class="label" for="email">Email</label>
   <input
     id="email"
